force-app/main/default/objects/Meeting_Attachment__c/Meeting_Attachment__c.object-meta.xml
<CustomObject>
    <label>Meeting Attachment</label>
    <nameField>
        <label>Meeting Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>