force-app/main/default/objects/Meeting_Attachment__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>Current Attachments</relationshipLabel>
    <relationshipName>Meeting_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>