force-app/main/default/objects/Meeting_Attachment__c/fields/OfflineCreatedById__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OfflineCreatedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meeting_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>