force-app/main/default/objects/Meeting_Attachment__c/fields/OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedDate__c</fullName>
    <label>OfflineCreatedDate</label>
    <type>DateTime</type>
</CustomField>