force-app/main/default/objects/Meeting_Attachment__c/fields/OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OfflineUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>OfflineUniqueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>