force-app/main/default/objects/Meeting_Attachment__c/fields/Post_Approval_Types__c.field-meta.xml
<CustomField>
    <fullName>Post_Approval_Types__c</fullName>
    <label>Post-Approval Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance Sheet/ Invoices</fullName>
            </value>
            <value>
                <fullName>Attendance Sheet/ Invoices/ Signed Agreement Documents/ Activity Photos/Final Presentation slides/Proof of Service-Benefits</fullName>
            </value>
            <value>
                <fullName>Attendance Sheet/ Invoices/ Activity Photos/Proof of Service-Benefits</fullName>
            </value>
            <value>
                <fullName>Invoices/ Signed Agreement Documents/Proof of Service-Benefits</fullName>
            </value>
            <value>
                <fullName>Invoices/ Proof of Service-Benefits</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Invoices/ Final Presentation slides-Material</fullName>
            </value>
            <value>
                <fullName>Invoices/ Proof of Service-Benefits/ Signed Agreement Documents</fullName>
            </value>
            <value>
                <fullName>Attendance Sheet/  Invoices</fullName>
            </value>
            <value>
                <fullName>All Post-Activity Categories (based on thesub type mapping)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>