force-app/main/default/objects/Meeting_Attachment__c/fields/Pre_Approval_Types__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Types__c</fullName>
    <label>Pre-Approval Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>HCPs CVs/ Scientific Content &amp; Agenda/ Draft Agreement Documents/ FMV &amp; Financial Justification/ Logistics Documents/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Presentation slides/  Scientific Content &amp; Agenda/ Logistics Documents/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Quotations &amp; Proposals/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Presentation slides/ Quotations &amp; Proposals/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Scientific Content &amp; Agenda/ Draft Agreement Documents/ Quotations &amp; Proposals/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Scientific Content &amp; Agenda/ Draft Agreement Documents/ Travel &amp; Hospitality Planning/Other Pre Activity Documents</fullName>
            </value>
            <value>
                <fullName>Scientific Content &amp; Agenda/ Draft Agreement Documents/ Travel &amp; Hospitality Planning/Other Documents</fullName>
            </value>
            <value>
                <fullName>All Pre-Activity Categories (based on thesub type mapping)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>