force-app/main/default/objects/Meeting_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post_Approval</fullName>
                <label>Post-Approval</label>
            </value>
            <value>
                <fullName>Pre_Approval</fullName>
                <label>Pre-Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>