force-app/main/default/objects/Meeting_Attachment__c/recordTypes/AV_Meeting_With_Speaker.recordType-meta.xml
<RecordType>
    <fullName>AV_Meeting_With_Speaker</fullName>
    <active>true</active>
    <label>AV Meeting (With Speaker)</label>
</RecordType>