force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Business_Meal.recordType-meta.xml
<RecordType>
    <fullName>Business_Meal</fullName>
    <active>true</active>
    <label>Business Meal</label>
</RecordType>