force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Displays_Exhibits.recordType-meta.xml
<RecordType>
    <fullName>Displays_Exhibits</fullName>
    <active>true</active>
    <label>Displays &amp; Exhibits</label>
</RecordType>