force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Enlisting_Fees_Visiting_Cards_Fees_Other_Fees.recordType-meta.xml
<RecordType>
    <fullName>Enlisting_Fees_Visiting_Cards_Fees_Other_Fees</fullName>
    <active>true</active>
    <label>Enlisting Fees/Visiting Cards Fees/Other Fees</label>
</RecordType>