force-app/main/default/objects/Meeting_Attachment__c/recordTypes/HCP_educational_support_in_international_Congress.recordType-meta.xml
<RecordType>
    <fullName>HCP_educational_support_in_international_Congress</fullName>
    <active>true</active>
    <label>HCP_educational_support_in_international_Congress</label>
</RecordType>