force-app/main/default/objects/Meeting_Attachment__c/recordTypes/HCP_educational_support_in_National_Congress.recordType-meta.xml
<RecordType>
    <fullName>HCP_educational_support_in_National_Congress</fullName>
    <active>true</active>
    <label>HCP educational support in National Congress</label>
</RecordType>