force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Hospital_3rd_Party_Scientific_Event_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Hospital_3rd_Party_Scientific_Event_Sponsorship</fullName>
    <active>true</active>
    <label>Hospital /3rd Party Scientific Event Sponsorship</label>
</RecordType>