force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Items_of_Medical_Educational_Utility.recordType-meta.xml
<RecordType>
    <fullName>Items_of_Medical_Educational_Utility</fullName>
    <active>true</active>
    <label>Items of Medical / Educational Utility</label>
</RecordType>