force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Marketing_Lead_Activities.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Lead_Activities</fullName>
    <active>true</active>
    <label>Marketing Lead Activities</label>
</RecordType>