force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Medical_Lead_Non_Promotional_Activities.recordType-meta.xml
<RecordType>
    <fullName>Medical_Lead_Non_Promotional_Activities</fullName>
    <active>true</active>
    <label>Medical Lead Non-Promotional Activities</label>
</RecordType>