force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Non_Promotional.recordType-meta.xml
<RecordType>
    <fullName>Non_Promotional</fullName>
    <active>true</active>
    <label>Non Promotional</label>
</RecordType>