force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Opportunity_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Meeting</fullName>
    <active>true</active>
    <label>Opportunity Meeting</label>
</RecordType>