force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Promotional_CHC.recordType-meta.xml
<RecordType>
    <fullName>Promotional_CHC</fullName>
    <active>true</active>
    <label>Promotional – CHC</label>
</RecordType>