force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Promotional_Primary_Care.recordType-meta.xml
<RecordType>
    <fullName>Promotional_Primary_Care</fullName>
    <active>true</active>
    <label>Promotional – Primary Care</label>
</RecordType>