force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Promotional_Specialty.recordType-meta.xml
<RecordType>
    <fullName>Promotional_Specialty</fullName>
    <active>true</active>
    <label>Promotional – Specialty</label>
</RecordType>