force-app/main/default/objects/Meeting_Attachment__c/recordTypes/Significant_Life_Event.recordType-meta.xml
<RecordType>
    <fullName>Significant_Life_Event</fullName>
    <active>true</active>
    <label>Significant Life Event</label>
</RecordType>